apps/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: apps
  labels:
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
        app.kubernetes.io/name: transmission
    spec:
      nodeSelector:
        node.hardware.gpu: intel-igpu
      tolerations:
        - key: node.hardware.gpu
          operator: Equal
          value: intel-igpu
          effect: NoSchedule
      securityContext:
        fsGroup: 568
      containers:
        - name: transmission
          image: linuxserver/transmission:4.1.2
          ports:
            - containerPort: 9091 # Web UI
            - containerPort: 51413 # TCP/UDP peer
          volumeMounts:
            - name: config
              mountPath: /config
            - name: download
              mountPath: /mnt/Download
            - name: media
              mountPath: /mnt/Media
          startupProbe:
            tcpSocket:
              port: 9091
            failureThreshold: 12
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9091
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "5Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config-pvc
        - name: download
          persistentVolumeClaim:
            claimName: transmission-download-pvc
        - name: media
          persistentVolumeClaim:
            claimName: transmission-media-pvc
