apps/transmission/service-peer.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-peer
  namespace: apps
spec:
  selector:
    app: transmission
  type: NodePort
  ports:
    - name: peer-tcp
      protocol: TCP
      port: 51413
      targetPort: 51413
      nodePort: 30141
    - name: peer-udp
      protocol: UDP
      port: 51413
      targetPort: 51413
      nodePort: 30141
